--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <h2>Credentials and Portfolio</h2>
 
-    <p><a href="https://docs.google.com/document/d/13W1yeB5mc3bBNQm-V1KhZnTJDZ3fe3T0_GpBq-1u48A/edit?usp=sharing"target="_blank">My Resume</a> | <a href="https://github.com/smitalpatil234"target="_blank">My GitHub</a></p>
+    <p><a href="https://docs.google.com/document/d/13W1yeB5mc3bBNQm-V1KhZnTJDZ3fe3T0_GpBq-1u48A/edit?usp=sharing"target="_blank">My Resume</a> | <a href="https://github.com/smitalpatil234"target="_blank">My GitHub</a> | <a href="https://www.linkedin.com/in/smitalpatil/"target="_blank">LinkedIn</a></p>
     <h2>Contact</h2>
 
     <p>Email: <a href="mailto:smitalpatil234@gmail.com">smitalpatil234@gmail.com</a></p>
