--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/master.css">
     <link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut" href="favicon.ico" type="image/x-icon">
-    <meta name="viewport" content="widht=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="widht=device-width, initial-scale=1, shrink-to-fit=yes">
     <meta name="name" content="Smital Patil's Portal">
   <!--  <meta name="robots" content="noindex, nofollow">  -->
   </header>
