--- a/index.html
+++ b/index.html
@@ -24,15 +24,25 @@
     <p><a href="https://docs.google.com/document/d/13W1yeB5mc3bBNQm-V1KhZnTJDZ3fe3T0_GpBq-1u48A/edit?usp=sharing"target="_blank">My Resume</a> | <a href="https://github.com/smitalpatil234"target="_blank">My GitHub</a> | <a href="https://www.linkedin.com/in/smitalpatil/"target="_blank">LinkedIn</a></p>
 
     <h2>Research Work</h2>
-    
-    <h2>Contact</h2>
 
-    <p>Email: <a href="mailto:smitalpatil234@gmail.com">smitalpatil234@gmail.com</a></p>
-  </body>
+<h3>Key Facial Landmark Detection</h3>
+<p>
+Facial landmark detection is a key step in facial analysis for artificial emotional intelligence.
+In this paper, facial landmark detection includes identification of important parts of the face such as
+the eyes, corners of eyes and mouth, eyebrows, jaw points and nose. We propose a deep learning
+model based on Convolutional Neural Network(CNN) and Residual blocks to predict facial
+landmarks. The CNN architecture consists of a convolutional layer with ReLU, a pooling layer, and
+lastly fully connected dense layers. To avoid the vanishing gradient issue, we will be using Residual
+Convolutional Neural Network(RCNN). The proposed network did very well in placing the
+coordinates on the right areas of the face.
+</p>
 
-  <footer>
-    <hr>
-    <code>Copyright (c) 2021 Smital Patil</code>
-  </footer>
+<h2>Contact</h2>
+<p>Email: <a href="mailto:smitalpatil234@gmail.com">smitalpatil234@gmail.com</a></p>
+
+<footer>
+  <hr>
+  <code>Copyright (c) 2021 Smital Patil</code>
+</footer>
 
 </html>
