--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <h3>Key Facial Landmark Detection (Under Review)</h3>
 <p>
 [Abstract]
+  
 Facial landmark detection is a key step in facial analysis for artificial emotional intelligence.
 In this paper, facial landmark detection includes identification of important parts of the face such as
 the eyes, corners of eyes and mouth, eyebrows, jaw points and nose. We propose a deep learning
@@ -36,6 +37,9 @@ landmarks. The CNN architecture consists of a convolutional layer with ReLU, a p
 lastly fully connected dense layers. To avoid the vanishing gradient issue, we will be using Residual
 Convolutional Neural Network(RCNN). The proposed network did very well in placing the
 coordinates on the right areas of the face.
+</p>
+<p>
+  Certificate of Participation: <a href="https://drive.google.com/file/d/16eYVb170VsMQkbVFzbyF45zgshnYSnAi/view?usp=sharing" target="_blank">View Certificate</a>
 </p>
 
 <h2>Contact</h2>
