--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <h2>Research Work</h2>
 
 <h3>Key Facial Landmark Detection (Under Review)</h3>
-<p>
-[Abstract]
-  
+  <p>
+    [Abstract]
+  </p>
+</p>
 Facial landmark detection is a key step in facial analysis for artificial emotional intelligence.
 In this paper, facial landmark detection includes identification of important parts of the face such as
 the eyes, corners of eyes and mouth, eyebrows, jaw points and nose. We propose a deep learning
@@ -38,9 +39,10 @@ lastly fully connected dense layers. To avoid the vanishing gradient issue, we w
 Convolutional Neural Network(RCNN). The proposed network did very well in placing the
 coordinates on the right areas of the face.
 </p>
-<p>
+  <p>
+  Poster: <a href="https://drive.google.com/file/d/1ZwTSVbyo7dHMI7CvmdrACUXOjzh3uYXr/view?usp=sharing" target="_blank">View Poster</a>
   Certificate of Participation: <a href="https://drive.google.com/file/d/16eYVb170VsMQkbVFzbyF45zgshnYSnAi/view?usp=sharing" target="_blank">View Certificate</a>
-</p>
+  </p>
 
 <h2>Contact</h2>
 <p>Email: <a href="mailto:smitalpatil234@gmail.com">smitalpatil234@gmail.com</a></p>
