--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <h2>Research Work</h2>
 
-<h3>Key Facial Landmark Detection (Under Review)</h3>
+<h3>Key Facial Landmark Detection (Under peer review for paper)</h3>
   <p>
     [Abstract]
   </p>
