--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     .research-container article {
       flex: 1;
     }
+    /* CSS for horizontal line */
+    .section-hr {
+      margin-top: 30px;
+      margin-bottom: 30px;
+      border: none;
+      border-top: 1px solid #ccc;
+    }
   </style>
 </head>
 <body>
@@ -36,12 +43,16 @@
     <p>I love challenges before me.</p>
     <p>I keep trying new things and experimenting in different areas.</p>
 
+    <hr class="section-hr"> <!-- Horizontal line -->
+
     <h2>Credentials and Portfolio</h2>
     <p>
       <a href="https://docs.google.com/document/d/13W1yeB5mc3bBNQm-V1KhZnTJDZ3fe3T0_GpBq-1u48A/edit?usp=sharing" target="_blank">My Resume</a> |
       <a href="https://github.com/smitalpatil234" target="_blank">My GitHub</a> |
       <a href="https://www.linkedin.com/in/smitalpatil/" target="_blank">LinkedIn</a>
     </p>
+
+    <hr class="section-hr"> <!-- Horizontal line -->
 
     <h2>Research Work</h2>
 
