--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <article>
           <h3>Key Facial Landmark Detection (Under peer review for paper)</h3>
           <p>
-            Facial landmark detection is a key step in facial analysis for artificial emotional intelligence.
+            [Abstract]
             <!-- Abstract and details of the research -->
           </p>
           <!-- Details of the first research project -->
           <p>
-            Facial landmark detection involves identifying crucial parts of the face like eyes, mouth corners, eyebrows, jaw points, and nose. We propose a deep learning model using CNN and Residual blocks to predict facial landmarks. The CNN architecture consists of convolutional layers with ReLU, pooling layers, and fully connected dense layers. To address gradient issues, we use Residual Convolutional Neural Network(RCNN). The proposed network performs well in placing coordinates on the right areas of the face.
+            Facial landmark detection is a key step in facial analysis for artificial emotional intelligence. In this paper, facial landmark detection includes identification of important parts of the face such as the eyes, corners of eyes and mouth, eyebrows, jaw points and nose. We propose a deep learning model based on Convolutional Neural Network(CNN) and Residual blocks to predict facial landmarks. The CNN architecture consists of a convolutional layer with ReLU, a pooling layer, and lastly fully connected dense layers. To avoid the vanishing gradient issue, we will be using Residual Convolutional Neural Network(RCNN). The proposed network did very well in placing the coordinates on the right areas of the face.
           </p>
           <p>
             Poster: <a href="https://drive.google.com/file/d/1ZwTSVbyo7dHMI7CvmdrACUXOjzh3uYXr/view?usp=sharing" target="_blank">View Poster</a> |
