--- a/index.html
+++ b/index.html
@@ -75,11 +75,16 @@
         </article>
 
         <article>
-          <h3>Facial Expression Recognition Using CNN</h3>
+          <h3>Ortho-LBP: Novel Features for Enhanced Pattern
+Recognition through Bitwise Logical Fusion of Bidirectional
+Orthogonal Information with LBP</h3>
           <p>
             [Abstract]
           </p>
           <!-- Details of the other research project -->
+          <p>
+            Facial landmark detection is a key step in facial analysis for artificial emotional intelligence. In this paper, facial landmark detection includes identification of important parts of the face such as the eyes, corners of eyes and mouth, eyebrows, jaw points and nose. We propose a deep learning model based on Convolutional Neural Network(CNN) and Residual blocks to predict facial landmarks. The CNN architecture consists of a convolutional layer with ReLU, a pooling layer, and lastly fully connected dense layers. To avoid the vanishing gradient issue, we will be using Residual Convolutional Neural Network(RCNN). The proposed network did very well in placing the coordinates on the right areas of the face.
+          </p>
         </article>
       </div>
     </section>
