--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       border: none;
       border-top: 1px solid #ccc;
     }
+    .patent-container {
+      margin-top: 30px;
+    }
   </style>
 </head>
 <body>
@@ -89,30 +92,27 @@
             [Abstract]
           </p>
           <p>
-            In the commercial world, customers are paramount, and understanding their
-behavior patterns can lead to highly impactful business decisions. Customer
-churn, defined as the rate at which consumers switch from one business to another,
-presents a considerable obstacle, especially for businesses that rely on subscription
-models such as telecoms. Accurately forecasting customer turnover enables
-firms to effectively implement focused retention initiatives and reduce the loss
-of income. The objective of this study is to employ logistic regression in order
-to forecast customer attrition for a telecoms company. We utilize a dataset that
-comprises comprehensive client information, encompassing demographics, service
-usage, and payment records. By doing a thorough exploratory data analysis
-(EDA), we have discovered important patterns and trends that are directly linked
-to customer attrition. We do data preprocessing by addressing missing values,
-encoding category variables, and normalizing numerical features. A robust statistical
-technique used for binary classification, is employed to construct a predictive
-model. The discovered key predictive variables include tenure, monthly charges,
-and contract type. Our data indicates that clients who have been with us for a
-shorter period of time, have higher monthly rates, and are on month-to-month
-contracts are more inclined to discontinue their services. The regression model attains an highest accuracy, surpassing other machine learning
-techniques in terms of overall predictive capability. This study showcases the
-efficacy as a valuable instrument for forecasting customer turnover, empowering
-firms to improve customer happiness and decrease churn rates by making
-informed decisions based on data.
+            Customer churn is a critical issue in the telecom industry, affecting profitability and market share. This research focuses on developing machine learning models to predict customer churn and identify key factors influencing retention. By analyzing customer data, including usage patterns, payment history, and demographic information, we utilize techniques such as decision trees, random forests, and gradient boosting to create predictive models. Our results show significant improvements in accuracy and precision, allowing telecom companies to implement targeted retention strategies, ultimately enhancing customer satisfaction and loyalty. Furthermore, we explore the potential of personalized marketing approaches based on churn predictions to further decrease turnover rates.
           </p>
         </article>
+      </div>
+    </section>
+
+    <hr class="section-hr"> <!-- Horizontal line -->
+
+    <h2>Patents</h2>
+    <section id="patents">
+      <div class="patent-container">
+        <article>
+          <h3>[PATENTED SYSTEM FOR HIGHLY EFFICIENT ON-DEVICE OBJECT DETECTION USING TINYISSIMOYOLO TECHNOLOGY IN AI-INTEGRATED SMART GLASSES]</h3>
+          <p>
+            Patent Number: [202441049550]
+          </p>
+          <p>
+            [Brief description of the patent and its significance.]
+          </p>
+        </article>
+        <!-- Add more patent articles as needed -->
       </div>
     </section>
 
