--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     <section id="patents">
       <div class="patent-container">
         <article>
-          <h3>[PATENTED SYSTEM FOR HIGHLY EFFICIENT ON-DEVICE OBJECT DETECTION USING TINYISSIMOYOLO TECHNOLOGY IN AI-INTEGRATED SMART GLASSES]</h3>
+          <h3>[Patent Title Here]</h3>
           <p>
-            Patent Number: [202441049550]
+            Patent Number: [Patent Number Here]
           </p>
           <p>
             [Brief description of the patent and its significance.]
@@ -115,6 +115,8 @@
         <!-- Add more patent articles as needed -->
       </div>
     </section>
+
+    <hr class="section-hr"> <!-- Horizontal line above Contact -->
 
     <h2>Contact</h2>
     <p>Email: <a href="mailto:smitalpatil234@gmail.com">smitalpatil234@gmail.com</a></p>
