--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
     <section id="patents">
       <div class="patent-container">
         <article>
-          <h3>[Patent Title Here]</h3>
+          <h3>PATENTED SYSTEM FOR HIGHLY EFFICIENT ON-DEVICE OBJECT DETECTION USING TINYISSIMOYOLO TECHNOLOGY IN AI-INTEGRATED SMART GLASSES</h3>
           <p>
-            Patent Number: [Patent Number Here]
+            Patent Number: [202441049550]
           </p>
           <p>
-            [Brief description of the patent and its significance.]
+            <a href="https://drive.google.com/file/d/16eYVb170VsMQkbVFzbyF45zgshnYSnAi/view?usp=sharing" target="_blank">[Check status here]</a>
           </p>
         </article>
         <!-- Add more patent articles as needed -->
