--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ informed decisions based on data.
             Patent Number: [202441049550]
           </p>
           <p>
-            <a href="https://drive.google.com/file/d/16eYVb170VsMQkbVFzbyF45zgshnYSnAi/view?usp=sharing" target="_blank">[Check status here]</a>
+            <a href="https://iprsearch.ipindia.gov.in/PublicSearch/PublicationSearch/ApplicationStatus" target="_blank">[Check status here]</a>
           </p>
         </article>
         <!-- Add more patent articles as needed -->
