--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </article>
 
         <article>
-          <h3>Ortho-LBP: Novel Features for Enhanced Pattern Recognition through Bitwise Logical Fusion of Bidirectional Orthogonal Information with LBP</h3>
+          <h3>Ortho-LBP: Novel Features for Enhanced Pattern Recognition through Bitwise Logical Fusion of Bidirectional Orthogonal Information with LBP (Under peer review for journal)</h3>
           <p>
             [Abstract]
           </p>
@@ -87,7 +87,7 @@
         </article>
 
         <article>
-          <h3>Predicting Customer Churn in the Telecom Industry with Machine Learning Techniques for Improved Retention Strategies</h3>
+          <h3>Predicting Customer Churn in the Telecom Industry with Machine Learning Techniques for Improved Retention Strategies (Presented in ICISML-2024. Accepted by journal, waiting for publication)</h3>
           <p>
             [Abstract]
           </p>
