--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <img src="images/smital.jpg" width="12%" alt="banner">
     <h1>Smital Patil</h1>
     <h2>About Me</h2>
-    <p>I am an ML and data science enthusiast who likes to use technology for social well-being.</p>
+    <p>I am an aritficial intelligance and robotics enthusiast who likes to use technology for social well-being.</p>
     <p>I love challenges before me.</p>
     <p>I keep trying new things and experimenting in different areas.</p>
 
